--- a/variables.css
+++ b/variables.css
@@ -1,7 +1,7 @@
 :root {
   --background-color: #121212;
-  --primary-red: #c41023;
-  --primary-yellow: #fbb238;
+  --primary-red: #bf1b2c;
+  --primary-yellow: #f9a72b;
   --white: #ffffff;
   --grey-1000: #010101;
   --grey-900: #171717;
