--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,10 +1,36 @@
 .root {
-  background-color: var(--background-color);
+  /* background-color: var(--background-color); */
+  overflow: hidden;
   font-family: "overpass", sans-serif;
+}
+
+.root::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url("/BGtest4.jpeg");
+  background-size: cover;
+  filter: blur(2px);
+  z-index: -2;
+}
+
+.root::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: radial-gradient(circle, transparent, rgba(0, 0, 0, 1));
+  pointer-events: none;
+  z-index: -1;
 }
 .main {
   display: flex;
   justify-content: center;
   align-items: center;
+  /* background-image: "./pictures/BGtest1.jpeg" !important; */
 }
-
