--- a/app/components/bar.module.css
+++ b/app/components/bar.module.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  font-weight: bold;
 }
 .logo {
   width: 200px;
@@ -26,4 +27,14 @@
   text-decoration: none;
   color: var(--text-color);
   margin: 0 10px;
+}
+
+.footer {
+  background-color: var(--white);
+  height: 80px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px 15px;
+  align-items: center;
 }
