--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap");
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
@@ -11965,6 +11967,10 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+body {
+  font-family: "Overpass", sans-serif;
+}
+
 a {
   text-decoration: none; /* Removes the underline */
   cursor: pointer; /* Optional: Ensures it still looks clickable */
@@ -11974,4 +11980,50 @@ a {
 a:hover {
   color: var(--primary-red) !important;
   text-decoration: underline;
+}
+
+.btn-red {
+  background-color: var(--red-2);
+  color: var(--white);
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 24px;
+}
+
+.btn-yellow {
+  background-color: var(--primary-yellow);
+  color: var(--white);
+  border: none;
+  padding: 2px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  margin: 10px auto;
+}
+
+.header {
+  margin: 20px;
+  font-size: 36px;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+}
+
+.subheader {
+  margin-bottom: 5px;
+  font-size: 26px;
+  font-family: "Poppins", sans-serif;
+}
+
+.date {
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-family: "Roboto", sans-serif;
+  color: var(--grey-200);
 }/*# sourceMappingURL=globals.css.map */
