--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,4 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap");
 @import "~bootstrap/scss/bootstrap";
+
+body {
+  font-family: "Overpass", sans-serif;
+}
 
 a {
   text-decoration: none; /* Removes the underline */
@@ -9,4 +15,47 @@ a {
 a:hover {
   color: var(--primary-red) !important;
   text-decoration: underline;
+}
+
+.btn-red {
+  background-color: var(--red-2);
+  color: var(--white);
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 24px;
+}
+.btn-yellow {
+  background-color: var(--primary-yellow);
+  color: var(--white);
+  border: none;
+  padding: 2px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  max-width: fit-content;
+  margin: 10px auto;
+}
+// .btn-white {
+// }
+.header {
+  margin: 20px;
+  font-size: 36px;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+}
+.subheader {
+  margin-bottom: 5px;
+  font-size: 26px;
+  font-family: "Poppins", sans-serif;
+}
+.date {
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-family: "Roboto", sans-serif;
+  color: var(--grey-200);
 }
