--- a/app/globals.css
+++ b/app/globals.css
@@ -11971,6 +11971,11 @@ body {
   font-family: "Overpass", sans-serif;
 }
 
+main {
+  min-height: 85.3vh;
+  margin: 50px;
+}
+
 a {
   text-decoration: none; /* Removes the underline */
   cursor: pointer; /* Optional: Ensures it still looks clickable */
@@ -11990,6 +11995,9 @@ a:hover {
   border-radius: 5px;
   cursor: pointer;
   font-size: 24px;
+}
+.btn-red :hover {
+  color: var(--white);
 }
 
 .btn-yellow {
@@ -12026,4 +12034,16 @@ a:hover {
   text-transform: uppercase;
   font-family: "Roboto", sans-serif;
   color: var(--grey-200);
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.white {
+  color: var(--white);
 }/*# sourceMappingURL=globals.css.map */
