--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap");
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
@@ -11967,24 +11969,15 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-body {
-  font-family: "Overpass", sans-serif;
-}
-
-main {
-  min-height: 85.3vh;
-  margin: 50px;
+.root {
+  background-color: var(--background-color);
+  font-family: "Questrial", sans-serif;
 }
 
 a {
   text-decoration: none; /* Removes the underline */
   cursor: pointer; /* Optional: Ensures it still looks clickable */
   color: var(--white);
-}
-
-a:hover {
-  color: var(--primary-red) !important;
-  text-decoration: underline;
 }
 
 .btn-red {
@@ -11995,9 +11988,16 @@ a:hover {
   border-radius: 5px;
   cursor: pointer;
   font-size: 24px;
+  transition: transform 0.5s;
 }
 .btn-red :hover {
   color: var(--white);
+}
+
+.btn-red:hover {
+  background-color: var(--primary-red);
+  transform: scale(1.05);
+  transition: transform 0.5s;
 }
 
 .btn-yellow {
@@ -12025,15 +12025,24 @@ a:hover {
 .subheader {
   margin-bottom: 5px;
   font-size: 26px;
+  font-weight: 500;
+  font-family: "Poppins", sans-serif;
+}
+
+.subsubheader {
+  margin-bottom: 5px;
+  margin-top: 5px;
+  font-size: 18px;
+  font-weight: 500;
+  text-decoration: underline;
   font-family: "Poppins", sans-serif;
 }
 
 .date {
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 20px;
   text-transform: uppercase;
-  font-family: "Roboto", sans-serif;
-  color: var(--grey-200);
+  font-family: "Bebas Neue", sans-serif;
+  color: var(--gray-200);
 }
 
 .bold {
@@ -12046,4 +12055,16 @@ a:hover {
 
 .white {
   color: var(--white);
+}
+
+.gray-200 {
+  color: var(--gray-200);
+}
+
+.gray-300 {
+  color: var(--gray-400);
+}
+
+.upper {
+  text-transform: uppercase;
 }/*# sourceMappingURL=globals.css.map */
