--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,14 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap");
+
 @import "~bootstrap/scss/bootstrap";
 
-body {
-  font-family: "Overpass", sans-serif;
-}
-
-main {
-  min-height: 85.3vh;
-  margin: 50px;
+.root {
+  background-color: var(--background-color);
+  font-family: "Questrial", sans-serif;
 }
 
 a {
@@ -17,10 +16,10 @@ a {
   color: var(--white);
 }
 
-a:hover {
-  color: var(--primary-red) !important;
-  text-decoration: underline;
-}
+// a:hover {
+//   color: var(--primary-red) !important;
+//   text-decoration: underline;
+// }
 
 .btn-red {
   background-color: var(--red-2);
@@ -33,6 +32,12 @@ a:hover {
   :hover {
     color: var(--white);
   }
+  transition: transform 0.5s;
+}
+.btn-red:hover {
+  background-color: var(--primary-red);
+  transform: scale(1.05);
+  transition: transform 0.5s;
 }
 
 .btn-yellow {
@@ -59,14 +64,23 @@ a:hover {
 .subheader {
   margin-bottom: 5px;
   font-size: 26px;
+  font-weight: 500;
+  font-family: "Poppins", sans-serif;
+}
+.subsubheader {
+  margin-bottom: 5px;
+  margin-top: 5px;
+  font-size: 18px;
+  font-weight: 500;
+  text-decoration: underline;
   font-family: "Poppins", sans-serif;
 }
 .date {
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 20px;
+  // font-weight: 600;
   text-transform: uppercase;
-  font-family: "Roboto", sans-serif;
-  color: var(--grey-200);
+  font-family: "Bebas Neue", sans-serif;
+  color: var(--gray-200);
 }
 .bold {
   font-weight: bold;
@@ -76,4 +90,13 @@ a:hover {
 }
 .white {
   color: var(--white);
+}
+.gray-200 {
+  color: var(--gray-200);
+}
+.gray-300 {
+  color: var(--gray-400);
+}
+.upper {
+  text-transform: uppercase;
 }
