--- a/variables.css
+++ b/variables.css
@@ -4,15 +4,15 @@
   --red-2: #af202f;
   --primary-yellow: #f9a72b;
   --white: #ffffff;
-  --grey-1000: #010101;
-  --grey-900: #171717;
-  --grey-800: #262626;
-  --grey-700: #3e3e3e;
-  --grey-600: #666666;
-  --grey-500: #777777;
-  --grey-400: rgb(162, 162, 162);
-  --grey-300: #c3c3c3;
-  --grey-200: #d2d3d3;
-  --grey-100: #e1e1e1;
-  --grey-50: #f0f0f0;
+  --gray-1000: #010101;
+  --gray-900: #171717;
+  --gray-800: #262626;
+  --gray-700: #3e3e3e;
+  --gray-600: #666666;
+  --gray-500: #777777;
+  --gray-400: rgb(162, 162, 162);
+  --gray-300: #c3c3c3;
+  --gray-200: #d2d3d3;
+  --gray-100: #e1e1e1;
+  --gray-50: #f0f0f0;
 }
