--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,16 +5,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap");
 
 .main {
-  /* background-color: var(--background-color); */
-  /* overflow: hidden; */
   display: flex;
   color: var(--white);
   flex-direction: column;
   min-height: 85.3vh;
   margin: 50px;
-  /* background-image: url("/BGtest4.jpeg");
-  background-size: cover;
-  background-attachment: fixed; */
 }
 
 .main::before {
@@ -24,7 +19,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url("/BGtest4.jpeg");
+  background-image: url("/Banner_11.jpg");
   background-size: cover;
   background-attachment: fixed;
 
@@ -73,4 +68,48 @@
   flex-direction: column;
   align-items: center;
   /* margin: 50px 200px; */
+}
+
+.background0 {
+  background-image: url("/Banner_1.jpg");
+}
+
+.background1 {
+  background-image: url("/Banner_2.jpg");
+}
+
+.background2 {
+  background-image: url("/Banner_3.jpg");
+}
+
+.background3 {
+  background-image: url("/Banner_4.jpg");
+}
+
+.background4 {
+  background-image: url("/Banner_5.jpg");
+}
+
+.background5 {
+  background-image: url("/Banner_6.jpg");
+}
+
+.background6 {
+  background-image: url("/Banner_7.jpg");
+}
+
+.background7 {
+  background-image: url("/Banner_8.jpg");
+}
+
+.background8 {
+  background-image: url("/Banner_9.jpg");
+}
+
+.background9 {
+  background-image: url("/Banner_10.jpg");
+}
+
+.background10 {
+  background-image: url("/Banner_11.jpg");
 }
