--- a/app/events/[id]/styles.module.css
+++ b/app/events/[id]/styles.module.css
@@ -1,30 +1,25 @@
-.card {
+.main {
   display: flex;
   flex-direction: row;
   margin: 80px 0;
   max-width: 1200px;
-}
-.card_reverse {
-  display: flex;
-  flex-direction: row-reverse;
-  margin: 80px 0;
-  max-width: 1200px;
+  margin: 50px auto;
 }
 
-.card_img {
-  width: 46%;
+.carousel {
+  width: 55%;
   /* display: flex;
   flex-direction: column;
   justify-content: center; */
 }
-.card_txt {
+.text {
+  color: white;
   background-color: var(--gray-900);
-  width: 54%;
+  width: 45%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   padding: 20px;
-  /* border-bottom: 5px solid var(--red-2); */
+  border-radius: 5px;
 }
 .rounded_left {
   border-radius: 0 10px 10px 0;
@@ -37,31 +32,24 @@
   width: 60%;
   background-color: var(--red-2);
 }
-
+.line {
+  height: 3px;
+  width: 60%;
+  background-color: var(--red-2);
+}
 @media screen and (max-width: 1000px) {
-  .card {
+  .main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  .card_reverse {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .card_right {
-    width: 100%;
-  }
-  .card_left {
-    width: 100%;
-  }
-  .card_img {
+
+  .carousel {
     width: 100%;
     border-radius: 10px 10px 0 0;
   }
-  .card_txt {
+  .text {
     width: 100%;
     border-radius: 0 0 10px 10px;
   }
