--- a/app/globals.scss
+++ b/app/globals.scss
@@ -2,8 +2,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap");
-
-@import "~bootstrap/scss/bootstrap";
+main {
+  min-height: calc(100vh - 125px);
+}
 
 .root {
   background-color: var(--background-color);
@@ -36,6 +37,8 @@ a.active {
     color: var(--white);
   }
   transition: transform 0.5s;
+  max-width: fit-content;
+  margin: 20px auto;
 }
 .btn-red:hover {
   background-color: var(--primary-red);
@@ -58,6 +61,13 @@ a.active {
 }
 // .btn-white {
 // }
+.title {
+  font-family: "Fjalla One", sans-serif;
+  text-transform: uppercase;
+  font-size: 64px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
 .header {
   margin: 20px;
   font-size: 36px;
