--- a/variables.css
+++ b/variables.css
@@ -1,5 +1,5 @@
 :root {
-  --background-color: #111111;
+  --background-color: #0c0c0c;
   --primary-red: #bf1b2c;
   --red-2: #af202f;
   --primary-yellow: #f9a72b;
