--- a/app/page.module.css
+++ b/app/page.module.css
@@ -4,15 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap");
 
-/* @keyframes moveBackground {
-  0% {
-    background-position: 0% 0%;
-  }
-  100% {
-    background-position: 0% 200%;
-  }
-} */
-
+/* Home background image **/
 .main {
   display: flex;
   color: var(--white);
@@ -27,13 +19,10 @@
   left: 0;
   right: 0;
   bottom: 0;
-  /* background-image: url("/Banner_11.jpg"); */
   background-size: cover;
   background-attachment: fixed;
 
-  /* filter: blur(1px); */
   z-index: -2;
-  /* animation: moveBackground 30s linear infinite; */
 }
 
 .main::after {
@@ -47,6 +36,8 @@
   pointer-events: none;
   z-index: -1;
 }
+
+/* Hightlight style **/
 .hightlight {
   color: var(--white);
   max-width: 500px;
@@ -72,6 +63,50 @@
   /* margin: 50px 200px; */
 }
 
+/* Pulse animation **/
+@keyframes pulse-rings {
+  0% {
+    transform: scale(0.5);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(10);
+    opacity: 0;
+  }
+}
+
+.pulse_indicator {
+  position: fixed;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 20px;
+  height: 20px;
+  z-index: 2;
+  pointer-events: none;
+}
+
+.ring {
+  position: absolute;
+  border: 2px solid gray;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  animation: pulse-rings 1.5s infinite;
+}
+
+.ring:nth-child(1) {
+  animation-delay: 0s;
+}
+.ring:nth-child(2) {
+  animation-delay: 0.5s;
+}
+.ring:nth-child(3) {
+  animation-delay: 1s;
+}
+
+/* Background Images **/
 .background0::before {
   background-image: url("/Banner_1.jpg");
 }
