--- a/components/EventCard/EventCard.module.css
+++ b/components/EventCard/EventCard.module.css
@@ -1,14 +1,18 @@
+.card_wrapper {
+  margin: 80px 0;
+  max-width: 1200px;
+  min-width: 1000px;
+}
+
 .card {
   display: flex;
   flex-direction: row;
-  margin: 80px 0;
-  max-width: 1200px;
+  /* min-width: 1000px; */
 }
 .card_reverse {
   display: flex;
   flex-direction: row-reverse;
-  margin: 80px 0;
-  max-width: 1200px;
+  /* min-width: 1000px; */
 }
 
 .card_img {
@@ -39,6 +43,10 @@
 }
 
 @media screen and (max-width: 1000px) {
+  .card_wrapper {
+    width: 100%;
+    min-width: 100%;
+  }
   .card {
     display: flex;
     flex-direction: column;
@@ -51,6 +59,7 @@
     justify-content: center;
     align-items: center;
   }
+
   .card_right {
     width: 100%;
   }
