minor style changes

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -8,11 +8,11 @@ main {
 
 .root {
   background-color: var(--background-color);
-  background: radial-gradient(
-    circle,
-    rgba(12, 12, 12, 1) 68%,
-    rgba(48, 48, 48, 1) 96%
-  );
+  // background: radial-gradient(
+  //   circle,
+  //   rgba(12, 12, 12, 1) 68%,
+  //   rgba(48, 48, 48, 1) 96%
+  // );
   font-family: "Questrial", sans-serif;
 }
 
