minor style and image changes

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,11 @@ main {
 
 .root {
   background-color: var(--background-color);
+  background: radial-gradient(circle, var(--background-color), rgba(0, 0, 0, 0.8) 25%, rgba(0, 0, 0, 0.6) 50%, rgba(0, 0, 0, 0.4) 75%);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: "Questrial", sans-serif;
 }
 
