--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap");
 main {
   min-height: calc(100vh - 125px);
+  margin: 30px;
 }
 
 .root {
