--- a/components/tickets/TicketCard.module.css
+++ b/components/tickets/TicketCard.module.css
@@ -19,7 +19,9 @@
 
 @media screen and (max-width: 1000px) {
   .card {
-    width: 90%;
+    margin: 20px 0px;
+
+    width: 100%;
     height: min-content;
   }
 }
